Cambios index, etc

--- a/contacto.html
+++ b/contacto.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-lg-12">
+      <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
         <div class="portada1">
-        <img  class="portada" src="imagenes/logo2.png" alt="" width="150">
+        <img  class="portada" src="imagenes/logo.jpg" alt="" width="150">
         </div>
         <ul class="nav justify-content-center">
           <li class="nav-item">
@@ -37,11 +37,11 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
+      <div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
         <form >
           <form class="contacto">
   <div class="form-row">
-    <div class="col">
+    <div class="col ">
       <input type="text" class="form-control" placeholder="Nombre">
     </div>
     <div class="col">
@@ -77,7 +77,7 @@
   <button type="submit" class="btn btn-primary">Enviar</button>
 </form>
       </div>
-    <div class="col-xs-12 col-lg-6">
+    <div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
       <div class="mapa">
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3408.5759190357107!2d-64.31509138516142!3d-31.31546429851042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94329d4ef0532afd%3A0x8bf229c10f028648!2sConcejo%20Deliberante%20de%20Sald%C3%A1n!5e0!3m2!1ses!2sar!4v1604245835991!5m2!1ses!2sar" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </div>
