--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-xs-12 col-lg-12">
+			<div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
         <div class="portada1">
-        <img  class="portada" src="imagenes/logo2.png" alt="" width="150">
+        <img  class="portada" src="imagenes/logo.jpg" alt="" width="150">
         </div>
 				<ul class="nav justify-content-center">
   				<li class="nav-item">
@@ -38,7 +38,7 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-xs-12 col-lg-12">
+			<div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
 				<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
  				 <div class="carousel-inner">
     			<div class="carousel-item active">
@@ -62,7 +62,7 @@
 				</div>
 			</div>
       <div class="row">
-			<div class="col-xs-12 col-lg-6">
+			<div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
 				<h3>Noticias</h3>
 				<h3>Jueves 30 de julio de 2020</h3>
         <p class="pp">En la sesion realizada ayer jueves 30 de julio en el Concejo Deliberante de Saldán, 
@@ -76,9 +76,15 @@ Concejales presentes: 7
 Secretaría a cargo de Jacqueline MÁRQUEZ
 </p>
 </div>
-<div class="col-xs-12 col-lg-6">
+<div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
   <iframe src="https://player.vimeo.com/video/474384912" width="640" height="362" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
 </div>
+</div>
+</div> 
+<div class="row">
+  <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
+    
+
 	<!-- Footer -->
 <footer class="page-footer font-small mdb-color pt-4">
 
@@ -180,7 +186,8 @@ Secretaría a cargo de Jacqueline MÁRQUEZ
 
   </div>
   <!-- Footer Links -->
-
+    </div>
+</div>
 </footer>
 <!-- Footer -->
 
