--- a/concejoabierto.html
+++ b/concejoabierto.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-lg-12">
+      <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
         <div class="portada1">
-        <img  class="portada" src="imagenes/logo2.png" alt="" width="150">
+        <img  class="portada" src="imagenes/logo.jpg" alt="" width="150">
         </div>
         <ul class="nav justify-content-center">
           <li class="nav-item">
@@ -37,7 +37,7 @@
       </div>
     </div>
         <div class="row">
-          <div class="col-xs-12 col-lg-12"> 
+          <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12"> 
          <form class="concejoabierto" >
   <div class="form-group">
     <label for="exampleFormControlInput1">Numero</label>
@@ -84,12 +84,13 @@
 </div>
   </div>
 </div>
-  <div class="col-xs-12 col-lg-12">
+  <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
     <h3>Proximamente</h3>
+    <p>Aqui podras encontrar toda la informacion necesaria y publica que usted necesite.</p>
   </div>
 </div>
     <div class="row">
-      <div class="col-xs-12 col-lg-12">
+      <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
 
     
     <footer class="page-footer font-small mdb-color pt-4">
