--- a/noticias.html
+++ b/noticias.html
@@ -10,9 +10,9 @@
 <body>
   <div class="container-fluid">
     <div class="row">
-      <div class="col-xs-12 col-lg-12">
+      <div class="col-xs-12 col-lg-12 col-md-12 col-sm-12">
         <div class="portada1">
-        <img  class="portada" src="imagenes/logo2.png" alt="" width="150">
+        <img  class="portada" src="imagenes/logo.jpg" alt="" width="150">
         </div>
         <ul class="nav justify-content-center">
           <li class="nav-item">
@@ -37,12 +37,12 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-lg-6">
+      <div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
         <p class="noticiass">Jueves 30 de julio de 2020
         En la sesion realizada ayer jueves 30 de julio en el Concejo Deliberante de Saldán, con los/as Concejales/as Mario BARÓN, Alejandro SANTOLAYA,Silvina CEBALLOS, Mauricio OLLER, y Antonela SANCHEZ, presididos por Rodrigo FERNÁNDEZ, se realizó el analisis semanal de la situación sanitaria en #Saldán, la región y la ejecución del Plan de Emergencia Municipal. Se trataron Proyectos de Ordenanza; Adhesión a la ley Provincial 10.702 Régimen sancionatorio excepcional emergencia sanitaria COVID-19, Aprobación de los proyectos para obras de adoquinado de calle peatonal, Victoria Ocampo (entre Eva Peron y Leandro N. Alem) y calle Leandro Alem (entre Victoria Ocampo y Arturo Frondizi).RESUMEN - ACTIVIDADES SEMANALES DEL CONCEJO DELIBERANTE.
         Secretaría a cargo de Jacqueline MÁRQUEZ.</p>   
       </div>
-       <div class="col-xs-12 col-lg-6">
+       <div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
         <img class="imgnoti" src="imagenes/30dejulio.jpg" alt="">
        </div>
     </div>
@@ -51,7 +51,7 @@
         <p class="noticiass">Jueves 07 de mayo de 2020
           Ayer, en el Concejo Deliberante de Saldán, los/as Concejales/as Mario BARÓN, Alejandro SANTOLAYA, Silvina CEBALLOS, Mauricio OLLER, Leticia CORREA y Antonela SANCHEZ, presididos por Rodrigo FERNÁNDEZ, se reunieron en el recinto de sesiones para repasar la situación sanitaria en Saldán y la ejecución del Plan de Emergencia Municipal.Asimismo, se envió para tratamiento en Comisión, Proyecto de Ordenanza sobre “Regulación de deudas por infracción”.RESUMEN - ACTIVIDADES SEMANALES DEL CONCEJO DELIBERANTE Concejales presentes: 7. Secretaría a cargo de Jacqueline MÁRQUEZ.</p>   
       </div>
-       <div class="col-xs-12 col-lg-6">
+       <div class="col-xs-12 col-lg-6 col-md-12 col-sm-12">
         <img  class="imgnoti" src="imagenes/mapa.jpg" alt="">
        </div>
     </div>
